// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilesListingForm/> empty files custom msg 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    />
    <div
      className="col-md-5"
    />
  </div>
  <FilesListing
    files={Immutable.List []}
    noFilesMessage="the file list is empty"
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> empty files default props 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    />
    <div
      className="col-md-5"
    />
  </div>
</Fragment>
`;

exports[`<FilesListingForm/> with editable and noReadOnlyFilesMessage 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <hr />
  <FilesListing
    canDelete={false}
    headerText="Other files you can't remove"
    noFilesMessage="No other files for you either!"
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
  <hr />
  <FilesListing
    canDelete={true}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm an excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "exam.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "xray.gif",
        },
        {
          "created": "2019-11-14 15:48:11.472",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm a json file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-o",
          "name": "report.json",
        },
      ]
    }
    headerText="Your files"
    noFilesMessage="No files for you!"
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with files custom props 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        title="add more files"
        type="button"
      >
        add more files
      </button>
    </div>
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <FilesListing
    canDelete={true}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm an excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "exam.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "xray.gif",
        },
        {
          "created": "2019-11-14 15:48:11.472",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm a json file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-o",
          "name": "report.json",
        },
      ]
    }
    noFilesMessage="No files currently attached."
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with files default props 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    />
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <FilesListing
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm an excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "exam.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "xray.gif",
        },
        {
          "created": "2019-11-14 15:48:11.472",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm a json file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-o",
          "name": "report.json",
        },
      ]
    }
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with no files and both messages 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      className="col-md-5"
    />
  </div>
  <FilesListing
    canDelete={false}
    headerText="Other files you can't remove"
    noFilesMessage="No other files for you either!"
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
  <FilesListing
    canDelete={true}
    headerText="Your files"
    noFilesMessage="No files for you!"
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with only readOnly files 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    />
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <FilesListing
    canDelete={false}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm an excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "exam.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "xray.gif",
        },
        {
          "created": "2019-11-14 15:48:11.472",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm a json file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-o",
          "name": "report.json",
        },
      ]
    }
    headerText="Read-only files"
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with readOnly and editable files 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <hr />
  <FilesListing
    canDelete={false}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Someone",
          "createdById": 1005,
          "description": "i'm a second excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "second.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm a pretty gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "pretty.gif",
        },
      ]
    }
    headerText="Other files you can't remove"
    noFilesMessage="No other files for you either!"
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
  <hr />
  <FilesListing
    canDelete={true}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm an excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "exam.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "xray.gif",
        },
        {
          "created": "2019-11-14 15:48:11.472",
          "createdBy": "Vader",
          "createdById": 1005,
          "description": "i'm a json file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-o",
          "name": "report.json",
        },
      ]
    }
    headerText="Your files"
    noFilesMessage="No files for you!"
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;

exports[`<FilesListingForm/> with readOnly and noFilesMessage 1`] = `
<Fragment>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-md-7"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      className="col-md-5"
    >
      <div
        className="pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          title="Download selected files"
          type="button"
        >
          <i
            className="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <FilesListing
    canDelete={false}
    files={
      Immutable.List [
        {
          "created": "2019-11-08 12:26:30.064",
          "createdBy": "Someone",
          "createdById": 1005,
          "description": "i'm a second excel file",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-excel-o",
          "name": "second.xlsx",
        },
        {
          "created": "2019-11-14 15:47:51.931",
          "createdBy": "Skywalker",
          "createdById": 1100,
          "description": "i'm a pretty gif",
          "downloadUrl": "/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles",
          "iconFontCls": "fa fa-file-image-o",
          "name": "pretty.gif",
        },
      ]
    }
    headerText="Other files you can't remove"
    noFilesMessage="No other files for you either!"
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
  <FilesListing
    canDelete={true}
    headerText="Your files"
    noFilesMessage="No files for you!"
    onDelete={[Function]}
    onFileSelection={[Function]}
    selectedFiles={Immutable.Set []}
  />
</Fragment>
`;
